# python-bitbankcc-ios-shortcuts

./: .gitignore  .pre-commit-config.yaml  README.md  README_JP.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_api_info.py  setup_api_info_for_shortcuts.py  setup_bbapi.sh  setup_bbapi_for_poetry.sh  setup_config.py  setup_config.sh
src/: input_spot_order.py  public_api_sample.py
tests/: test_UseBitbankApi.py
